# taiko-diffusion

./: .gitignore  Analysis.ipynb  LICENSE  PROJECT_INTENT.md  README.md  beat_aligned_dataset.ipynb  beat_aligned_dataset.py  check.ipynb  data_extract.ipynb  data_preprocessing.ipynb  otsu_Transformer.ipynb  pyproject.toml
sample_data/raw/: 2034220.osz
src/: __init__.py
src/preprocessing/: __init__.py  osutaiko_parser.py  osutaiko_reconstructor.py  unpack_osz.py
