[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taiko-diffusion"
version = "0.1.0"
description = "Automatic osu!taiko chart generation from music."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tqdm>=4.66.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

